test/files/neg/t4302.scala
//> using options -Xfatal-warnings
//
object Test {
  def hasMatch[T](x: AnyRef) = x.isInstanceOf[T]
}
