test/files/neg/t4302.check
t4302.scala:2: warning: abstract type T is unchecked since it is eliminated by erasure
  def hasMatch[T](x: AnyRef) = x.isInstanceOf[T]
                                             ^
error: No warnings can be incurred under -Xfatal-warnings.
one warning found
one error found
